--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,9 +5,10 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "CI-CD-setup" ]
   pull_request:
     branches: [ "main" ]
+  
 
 jobs:
   build:
