--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,10 +23,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
+      working-directory: MIND-Path
+    - run: npm install
     - run: npm test
