--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,17 +20,11 @@ jobs:
         node-version: [19.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
-    defaults:
-      run:
-        working-directory: /MIND-Path
     steps:
-    - run: ls
     - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - run: | 
+        cd MIND-Path
+        npm install
+    - run: | 
+        cd MIND-Path
+        npm test
