Update test script

--- a/MIND-Path/package.json
+++ b/MIND-Path/package.json
@@ -9,7 +9,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "expo lint",
-    "test": "jest --watchAll"
+    "test": "jest --ci --watchAll=false"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
