--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,6 +39,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: MIND-Path/package-lock.json
     
     - name: Install dependencies
       run: npm ci
