--- a/MIND-Path/app.json
+++ b/MIND-Path/app.json
@@ -43,6 +43,18 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "c56b974d-1f98-4fa9-bce7-f1c367e119b9"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/c56b974d-1f98-4fa9-bce7-f1c367e119b9"
     }
   }
 }
