--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -54,6 +54,4 @@ jobs:
       run: npm test
 
     - name: Build App
-      uses: expo/expo-github-action/preview@v8
-      with:
-        command: eas build --non-interactive
+      run: eas build --non-interactive
