Fix syntax error

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -54,5 +54,6 @@ jobs:
       run: npm test
 
     - name: Build App
-      run: eas build --non-interactive --platform android
-      run: eas build --non-interactive --platform ios
+      run: | 
+        eas build --non-interactive --platform android
+        eas build --non-interactive --platform ios
