--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,13 +25,6 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    # - name: Check for EXPO_TOKEN
-    #   run: |
-    #     if [ -z "${{ secrets.EXPO_TOKEN }}" ]; then
-    #       echo "You must provide an EXPO_TOKEN secret linked to this project's Expo account in this repo's secrets. Learn more: https://docs.expo.dev/eas-update/github-actions"
-    #       exit 1
-    #     fi
-
     - uses: actions/checkout@v4
 
     - name: Setup Node.js
@@ -43,17 +36,9 @@ jobs:
     
     - name: Install dependencies
       run: npm ci
-
-    - name: Setup EAS
-      uses: expo/expo-github-action@v8
-      with:
-        eas-version: latest
-        token: ${{ secrets.EXPO_TOKEN }}
     
     - name: Run Tests
       run: npm test
 
     - name: Build App
-      run: | 
-        eas build --non-interactive --platform android
-        eas build --non-interactive --platform ios
+      run: npx expo export --platform all --output-dir dist-ci
