--- a/MIND-Path/package.json
+++ b/MIND-Path/package.json
@@ -17,30 +17,30 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@types/jest": "^30.0.0",
-    "expo": "~54.0.7",
+    "expo": "54.0.13",
     "expo-constants": "~18.0.8",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.8",
+    "expo-image": "~3.0.9",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.4",
+    "expo-router": "~6.0.11",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "~15.0.7",
+    "expo-updates": "~29.0.12",
+    "expo-web-browser": "~15.0.8",
     "jest": "~29.7.0",
     "jest-expo": "~54.0.12",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1",
-    "expo-updates": "~29.0.12"
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@testing-library/react-native": "^13.3.3",
