--- a/MIND-Path/package.json
+++ b/MIND-Path/package.json
@@ -31,6 +31,8 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.7",
+    "jest": "~29.7.0",
+    "jest-expo": "~54.0.12",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.0",
