--- a/MIND-Path/tsconfig.json
+++ b/MIND-Path/tsconfig.json
@@ -7,7 +7,10 @@
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "typeRoots": [
+      "./node_modules/@types"
+    ]
   },
   "include": [
     "**/*.ts",
