--- a/MIND-Path/package.json
+++ b/MIND-Path/package.json
@@ -35,8 +35,8 @@
     "jest-expo": "~54.0.12",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~3.17.4",
