--- a/MIND-Path/package.json
+++ b/MIND-Path/package.json
@@ -37,11 +37,11 @@
     "nativewind": "^4.2.1",
     "node-fetch": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~3.17.4",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.16.0",
     "react-native-url-polyfill": "^3.0.0",
