--- a/MIND-Path/package.json
+++ b/MIND-Path/package.json
@@ -56,8 +56,7 @@
     "dotenv": "^17.2.3",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
-    "react-test-renderer": "^19.1.0",
-    "ts-node": "^10.9.2",
+    "react-test-renderer": "19.1.0",
     "typescript": "~5.9.2"
   },
   "private": true,
