--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,7 +35,7 @@ jobs:
         cache-dependency-path: MIND-Path/package-lock.json
     
     - name: Install dependencies
-      run: npm ci
+      run: npm install
     
     - name: Run Tests
       run: npm test
