--- a/MIND-Path/.env.example
+++ b/MIND-Path/.env.example
@@ -1,6 +1,5 @@
-GOOGLE_GENERATIVE_AI_API_KEY = api_key_goes_here
-
-#For front-end searching 
+GOOGLE_GENERATIVE_AI_API_KEY = AIzaSyAOg1WH-SB7c2QHJROFD87Vk3ECgf9_fWk
+#For front-end searching
 EXPO_PUBLIC_SUPABASE_URL=https://xxxxx.supabase.co
 EXPO_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJ...
 
