--- a/MIND-Path/package.json
+++ b/MIND-Path/package.json
@@ -47,7 +47,8 @@
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "tailwindcss": "^3.4.18"
+    "tailwindcss": "^3.4.18",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@testing-library/react-native": "^13.3.3",
