--- a/MIND-Path/package.json
+++ b/MIND-Path/package.json
@@ -31,6 +31,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
+    "expo-secure-store": "~13.0.2",
     "expo-web-browser": "~15.0.7",
     "jest": "~29.7.0",
     "jest-expo": "~54.0.12",
