--- a/MIND-Path/package.json
+++ b/MIND-Path/package.json
@@ -5,15 +5,23 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "postinstall": "node_modules/.bin/rn-nodeify --install crypto,fs,https --hack"
   },
   "dependencies": {
     "@ai-sdk/google": "^2.0.17",
     "@ai-sdk/react": "^2.0.60",
     "@expo/vector-icons": "^15.0.2",
+    "@nlpjs/basic": "^5.0.0-alpha.5",
+    "@nlpjs/bert-tokenizer": "^5.0.0-alpha.5",
+    "@nlpjs/core": "^5.0.0-alpha.5",
+    "@nlpjs/lang-en-min": "^5.0.0-alpha.5",
+    "@nlpjs/nlp": "^5.0.0-alpha.5",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
@@ -31,22 +39,32 @@
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.7",
     "nativewind": "^4.2.1",
+    "onnxruntime-react-native": "^1.23.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-executorch": "^0.5.12",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "tailwindcss": "^3.4.18"
+    "rn-nodeify": "^10.3.0",
+    "tailwindcss": "^3.4.18",
+    "tokenizers": "^0.13.3"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.1.0",
+    "browserify": "^17.0.1",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "jest": "^30.2.0",
+    "jest-expo": "^54.0.13",
+    "terser": "^5.44.0",
+    "ts-jest": "^29.4.5",
     "typescript": "~5.9.2"
   },
   "private": true
